mytemplate2.yaml/mytemplate.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Simple S3 bucket creation with VPC and security group

Parameters:
  TrustedIP:
    Description: "Trusted IP for SSH access"
    Type: String
    Default: "0.0.0.0/0"

Resources:

  MyS3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: my-cfn-s3-bucket-devsecops2

  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC

    InternetGateway:
      Type: AWS::EC2::InternetGateway
      Properties:
        Tags:
          - Key: Name
            Value: MyInternetGateway

    AttachIGW:
      Type: AWS::EC2::VPCGatewayAttachment
        Properties:
          VpcId: !Ref MyVPC
      Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref MyVPC
            CidrBlock: 10.0.2.0/24
            MapPublicIpOnLaunch: false
            AvailabilityZone: !Select [0, !GetAZs]
            Tags:
              - Key: Name
                Value: PrivateSubnet

    PublicRouteTable:
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId: !Ref MyVPC
        Tags:
          - Key: P3C
            Value: PublicRouteTable

    PublicRoute:
      Type: AWS::EC2::Route
      DependsOn: AttachIGW
      Properties:
        RouteTableId: !Ref PublicRouteTable
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId: !Ref InternetGateway

    PublicSubnetRouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        SubnetId: !Ref PublicSubnet
        RouteTableId: !Ref PublicRouteTable

    MySecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: Allow SSH access from trusted IP only
        VpcId: !Ref MyVPC
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 22
            ToPort: 22
            CidrIp: !Ref TrustedIP
        Tags:
          - Key: Name
            Value: MySecurityGroup
